--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     "Operator wajib memakai kacamata safety, sarung tangan, dan sepatu safety.",
                     "Dilarang keras membersihkan mesin dalam keadaan menyala."
                 ],
-                gambar: "https://images.unsplash.com/photo-1502224562085-639556652f33?w=800&auto=format&fit=crop"
+                gambar: "./assets/img/cutting-area.jpg"
             },
             {
                 area: "Area Pengamplasan",
@@ -65,7 +65,7 @@
                     "Aktifkan sistem ventilasi dan penghisap debu sebelum bekerja.",
                     "Bersihkan area kerja setiap akhir shift untuk mencegah penumpukan debu."
                 ],
-                gambar: "https://images.unsplash.com/photo-1533090161767-e6ffed986c88?w=800&auto=format&fit=crop"
+                gambar: "./assets/img/sanding-area.jpg"
             },
             {
                 area: "Area Finishing",
@@ -74,7 +74,7 @@
                     "Simpan bahan kimia sesuai label MSDS.",
                     "Hindari penggunaan api terbuka (rokok/las) di sekitar bahan pelarut."
                 ],
-                gambar: "https://images.unsplash.com/photo-1563214227-bb4f895c270c?w=800&auto=format&fit=crop"
+                gambar: "./assets/img/finishing-area.jpg"
             },
             {
                 area: "Gudang & Pengemasan",
