--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         const DATA_TIM = [
             { nama: "[Nama Anggota 1]", img: "https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&h=400&fit=crop" },
             { nama: "[Nama Anggota 2]", img: "https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400&h=400&fit=crop" },
-            { nama: "[Nama Anggota 3]", img: "https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=400&h=400&fit=crop" },
+            { nama: "M. Daffa Praditya", img: "./assets/img/daffaBPP.jpeg" },
             { nama: "[Nama Anggota 4]", img: "https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?w=400&h=400&fit=crop" },
             { nama: "[Nama Anggota 5]", img: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=400&h=400&fit=crop" },
         ];
