--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         };
 
         const DATA_TIM = [
-            { nama: "[Nama Anggota 1]", img: "https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&h=400&fit=crop" },
-            { nama: "[Nama Anggota 2]", img: "https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400&h=400&fit=crop" },
-            { nama: "M. Daffa Praditya", img: "./assets/img/daffaBPP.jpeg" },
-            { nama: "[Nama Anggota 4]", img: "https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?w=400&h=400&fit=crop" },
-            { nama: "[Nama Anggota 5]", img: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=400&h=400&fit=crop" },
+            { nama: "Arga Candra Wirawan", img: "https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&h=400&fit=crop" },
+            { nama: "Muhammad Abyan", img: "https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400&h=400&fit=crop" },
+            { nama: "Dhafir Tsabit", img: "./assets/img/dhafir.jpeg" },
+            { nama: "Diandra Rangga", img: "https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?w=400&h=400&fit=crop" },
+            { nama: "Fahrul Muzaki", img: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=400&h=400&fit=crop" },
         ];
 
         const DATA_SOP = [
