--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     "Operator wajib memakai kacamata safety, sarung tangan, dan sepatu safety.",
                     "Dilarang keras membersihkan mesin dalam keadaan menyala."
                 ],
-                gambar: "https://images.unsplash.com/photo-1504198458649-3128b932f49e?w=800&auto=format&fit=crop"
+                gambar: "./assets/img/cutting-area.jpg"
             },
             {
                 area: "Area Pengamplasan",
@@ -66,7 +66,7 @@
                     "Aktifkan sistem ventilasi dan penghisap debu sebelum bekerja.",
                     "Bersihkan area kerja setiap akhir shift untuk mencegah penumpukan debu."
                 ],
-                gambar: "https://images.unsplash.com/photo-1533090161767-e6ffed986c88?w=800&auto=format&fit=crop"
+                gambar: "./assets/img/sanding-area.jpg"
             },
             {
                 area: "Area Finishing",
@@ -76,7 +76,7 @@
                     "Simpan bahan kimia sesuai label MSDS.",
                     "Hindari penggunaan api terbuka (rokok/las) di sekitar bahan pelarut."
                 ],
-                gambar: "https://images.unsplash.com/photo-1620613914073-1f198f1212dc?w=800&auto=format&fit=crop"
+                gambar: "./assets/img/finishing-area.jpg"
             },
             {
                 area: "Gudang & Pengemasan",
