--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         const HomePage = ({ setActiveTab }) => (
             <div className="fade-in">
                 <div className="relative bg-stone-900 h-[400px] md:h-[500px] flex items-center justify-center text-center px-4">
-                    <img src="https://images.unsplash.com/photo-1611486212557-88be5ff6f941?q=80&w=2070&auto=format&fit=crop" className="absolute inset-0 w-full h-full object-cover opacity-40"/>
+                    <img src="./assets/img/emergency-procedure.jpg" className="absolute inset-0 w-full h-full object-cover opacity-40"/>
                     <div className="relative z-10 max-w-3xl">
                         <h1 className="text-3xl md:text-5xl text-white font-bold mb-4 md:mb-6">SOP K3 Digital</h1>
                         <p className="text-lg md:text-xl text-stone-200 mb-6 md:mb-8">Manajemen keselamatan kerja PT Jepara Furniture.</p>
