foto anggota kelompok added

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         };
 
         const DATA_TIM = [
-            { nama: "Arga Candra Wirawan", img: "https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&h=400&fit=crop" },
-            { nama: "Muhammad Abyan", img: "https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400&h=400&fit=crop" },
-            { nama: "Dhafir Tsabit", img: "https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=400&h=400&fit=crop" },
-            { nama: "Diandra Rangga", img: "https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?w=400&h=400&fit=crop" },
-            { nama: "Fahrul Muzaki", img: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=400&h=400&fit=crop" },
+            { nama: "Arga Candra Wirawan", img: "./assets/img/wawan." },
+            { nama: "Muhammad Abyan", img: "./assets/img/abyan.png" },
+            { nama: "Dhafir Tsabit", img: "./assets/img/dhafir.png" },
+            { nama: "Diandra Rangga", img: "./assets/img/rangga.jpg" },
+            { nama: "Fahrul Muzaki", img: "./assets/img/fahrul.png" },
         ];
 
         const DATA_SOP = [
