wawan foto added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         };
 
         const DATA_TIM = [
-            { nama: "Arga Candra Wirawan", img: "./assets/img/wawan." },
+            { nama: "Arga Candra Wirawan", img: "./assets/img/wawan.jpg" },
             { nama: "Muhammad Abyan", img: "./assets/img/abyan.png" },
             { nama: "Dhafir Tsabit", img: "./assets/img/dhafir.png" },
             { nama: "Diandra Rangga", img: "./assets/img/rangga.jpg" },
